--- a/test2.csproj
+++ b/test2.csproj
@@ -11,7 +11,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="YamlDotNet.Signed" Version="4.3.1" />
+    <PackageReference Include="YamlDotNet" Version="4.3.1" />
   </ItemGroup>
 
 </Project>
